feat: translate navigation group

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -75,5 +75,6 @@
     "Library Categories": "Library Categories",
     "Library Type": "Library Type",
     "Library File": "Library File",
-    "file url": "file url"
+    "file url": "file url",
+    "Content Management": "Content Management"
 }
