--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -78,5 +78,6 @@
     "file url": "رابط الملف",
     "Send": "ارسال",
     "sorry, the password incorrect!": "عفوا، كلمة المرور غير صحيحة",
-    "FAQ Categories": "التصنيفات"
+    "FAQ Categories": "التصنيفات",
+    "Content Management" : "إدارة المحتوى"
 }
