--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -1,6 +1,6 @@
 {
-    "Posts": "التدوينات",
-    "Post": "تدوينة",
+    "Posts": "المقالات",
+    "Post": "مقالة",
     "CMS": "ادارة المحتوى",
     "Tag": "تصنيف",
     "Tags": "التصنيفات",
@@ -22,8 +22,8 @@
     "Private": "خاص",
     "Trash": "محذوف",
     "Inherit": "موروث",
-    "Post Title": "عنوان التدوينة",
-    "Post Content": "محتوى التدوينة",
+    "Post Title": "عنوان المقالة",
+    "Post Content": "محتوى المقالة",
     "SEO": "تحسين محركات البحث",
     "SEO Settings": "الاعدادات لتحسين محركات البحث",
     "Tags and Categories": "التصنيفات والأوسمة",
@@ -31,7 +31,7 @@
     "Categories": "التصنيفات",
     "visibility": "المشاهدة",
     "Visibility Options": "خيارات المشاهدة والعرض",
-    "status": "حالة التدوينة",
+    "status": "حالة المقالة",
     "Password": "كلمة المرور",
     "published at": "منشور في",
     "Featured Image": "الصورة المميزة",
@@ -43,7 +43,7 @@
     "Post Slug": "الرابط المختصر",
     "Write an excerpt for your post": "اكتب ملخص للمقالة",
     "Show All posts in": "هرض كافة المثالات في",
-    "No posts found": "لاتوجد تدوينات حاليا",
+    "No posts found": "لاتوجد مقالات حاليا",
     "FAQ": "الأسئلة الشائعة",
     "frequently asked questions": "الأسئلة الشائعة",
     "FAQs": "الأسئلة الشائعة",
@@ -57,10 +57,10 @@
     "featured image url": "رابط الصورة",
     "Navigations": "قوائم التنقل",
     "Navigation": "قائمة التنقل",
-    "Select Post": "اختر التدوينة",
+    "Select Post": "اختر المقالة",
     "Select Page": "اختر الصفحة",
-    "Recent Post": "أحدث التدوينات",
-    "Post link": "رابط تدوينة",
+    "Recent Post": "أحدث المقالات",
+    "Post link": "رابط المقالة",
     "Page link": "رابط صفحة",
     "Libraries": "المكتبات",
     "Image": "صورة",
