wip: prepare website

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -79,5 +79,10 @@
     "Send": "ارسال",
     "sorry, the password incorrect!": "عفوا، كلمة المرور غير صحيحة",
     "FAQ Categories": "التصنيفات",
-    "Content Management" : "إدارة المحتوى"
+    "Content Management" : "إدارة المحتوى",
+    "About Us": "من نحن",
+    "Contact Us": "اتصل بنا",
+    "News": "الأخبار",
+    "Select language": "اختر اللغة",
+    "Home": "الرئيسية"
 }
