--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -76,5 +76,10 @@
     "Library Type": "Library Type",
     "Library File": "Library File",
     "file url": "file url",
-    "Content Management": "Content Management"
+    "Content Management": "Content Management",
+    "About Us": "About Us",
+    "Contact Us": "Contact Us",
+    "News": "News",
+    "Select language": "Select language",
+    "Home": "Home"
 }
