wip: prepare website

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -84,5 +84,6 @@
     "Contact Us": "اتصل بنا",
     "News": "الأخبار",
     "Select language": "اختر اللغة",
-    "Home": "الرئيسية"
+    "Home": "الرئيسية",
+    "Read more": "اقرأ المزيد"
 }
