wip: prepare website

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -85,5 +85,6 @@
     "News": "الأخبار",
     "Select language": "اختر اللغة",
     "Home": "الرئيسية",
-    "Read more": "اقرأ المزيد"
+    "Read more": "اقرأ المزيد",
+    "Search": "بحث"
 }
