feat: show parent page in PageResource.php

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -86,5 +86,6 @@
     "Select language": "اختر اللغة",
     "Home": "الرئيسية",
     "Read more": "اقرأ المزيد",
-    "Search": "بحث"
+    "Search": "بحث",
+    "parent.name": "الاب"
 }
