--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -81,5 +81,6 @@
     "Contact Us": "Contact Us",
     "News": "News",
     "Select language": "Select language",
-    "Home": "Home"
+    "Home": "Home",
+    "parent.name": "parent"
 }
