wip: page resource

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -87,5 +87,5 @@
     "Home": "الرئيسية",
     "Read more": "اقرأ المزيد",
     "Search": "بحث",
-    "parent.name": "الاب"
+    "parent.title": "الاب"
 }
