--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -82,5 +82,5 @@
     "News": "News",
     "Select language": "Select language",
     "Home": "Home",
-    "parent.name": "parent"
+    "parent.title": "parent"
 }
