feat: add new localization strings for various languages and update PostResource labels

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -6,7 +6,11 @@
     "Tags": "التصنيفات",
     "publish": "منشور",
     "Title": "العنوان",
+    "Title & Content": "العنوان والمحتوى",
     "Status": "الحالة",
+    "Visibility": "الظهور",
+    "Not published": "غير منشور",
+    "Edit": "تعديل",
     "Post Tags": "الأوسمة",
     "Post Category": "التصنيفات",
     "Password Protected": "محمي بكلمة المرور",
@@ -35,6 +39,7 @@
     "Password": "كلمة المرور",
     "published at": "منشور في",
     "Featured Image": "الصورة المميزة",
+    "Featured image upload": "رفع الصورة المميزة",
     "Pages": "الصفحات",
     "Page": "صفحة",
     "Description": "الوصف",
