--- a/resources/lang/ckb.json
+++ b/resources/lang/ckb.json
@@ -6,7 +6,11 @@
     "Tags": "تاگەکان",
     "publish": "بڵاوکردنەوە",
     "Title": "ناونیشان",
+    "Title & Content": "ناونیشان و ناوەڕۆک",
     "Status": "دۆخ",
+    "Visibility": "بینین",
+    "Not published": "بڵاونەکراوەتەوە",
+    "Edit": "دەستکاریکردن",
     "Post Tags": "پۆست تاگ",
     "Post Category": "جۆری پۆست",
     "Password Protected": "وشەی نهێنی پارێزراوە",
@@ -35,6 +39,7 @@
     "Password": "دۆخ",
     "published at": "بڵاوکراوەتەوە لە",
     "Featured Image": "وێنەی تایبەتمەند",
+    "Featured image upload": "بەرزکردنەوەی وێنەی تایبەتمەند",
     "Pages": "لاپەڕەکان",
     "Page": "لاپەڕە",
     "Description": "وەسف",
