--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -6,7 +6,11 @@
     "Tags": "Tags",
     "publish": "publish",
     "Title": "Title",
+    "Title & Content": "Title & Content",
     "Status": "Status",
+    "Visibility": "Visibility",
+    "Not published": "Not published",
+    "Edit": "Edit",
     "Post Tags": "Post Tags",
     "Post Category": "Post Category",
     "Password Protected": "Password Protected",
@@ -35,6 +39,7 @@
     "Password": "Password",
     "published at": "published at",
     "Featured Image": "Featured Image",
+    "Featured image upload": "Featured image upload",
     "Pages": "Pages",
     "Page": "Page",
     "Description": "Description",
