--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -6,7 +6,11 @@
     "Tags": "Balises",
     "publish": "publier",
     "Title": "Titre",
+    "Title & Content": "Titre et contenu",
     "Status": "Statut",
+    "Visibility": "Visibilité",
+    "Not published": "Non publié",
+    "Edit": "Modifier",
     "Post Tags": "Balises de publication",
     "Post Category": "Catégorie de l'article",
     "Password Protected": "Protégé par un mot de passe",
@@ -35,6 +39,7 @@
     "Password": "Mot de passe",
     "published at": "Date de publication",
     "Featured Image": "Image sélectionnée",
+    "Featured image upload": "Télécharger l'image sélectionnée",
     "Pages": "Pages",
     "Page": "Page",
     "Description": "Description",
