--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -9,6 +9,8 @@
     "Title & Content": "Başlık & İçerik",
     "Content": "İçerik",
     "Status": "Durum",
+    "Not published": "Yayınlanmadı",
+    "Edit": "Düzenle",
     "Post Tags": "Yazı Etiketleri",
     "Post Category": "Yazı Kategorisi",
     "Password Protected": "Şifre Korumalı",
@@ -38,6 +40,7 @@
     "Password": "Şifre",
     "published at": "yayınlanma tarihi",
     "Featured Image": "Öne Çıkan Görsel",
+    "Featured image upload": "Öne çıkan görsel yükle",
     "Pages": "Sayfalar",
     "Page": "Sayfa",
     "Description": "Açıklama",
