feat: add localization strings for page titles and content across multiple languages

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -11,6 +11,7 @@
     "Visibility": "الظهور",
     "Not published": "غير منشور",
     "Edit": "تعديل",
+    "Open": "فتح",
     "Post Tags": "الأوسمة",
     "Post Category": "التصنيفات",
     "Password Protected": "محمي بكلمة المرور",
@@ -27,7 +28,9 @@
     "Trash": "محذوف",
     "Inherit": "موروث",
     "Post Title": "عنوان المقالة",
+    "Page Title": "عنوان الصفحة",
     "Post Content": "محتوى المقالة",
+    "Page Content": "محتوى الصفحة",
     "SEO": "تحسين محركات البحث",
     "SEO Settings": "الاعدادات لتحسين محركات البحث",
     "Tags and Categories": "التصنيفات والأوسمة",
@@ -46,7 +49,9 @@
     "Parent Page": "الصفحة الأب",
     "Page Order": "ترتيب الصفحة",
     "Post Slug": "الرابط المختصر",
+    "Page Slug": "رابط الصفحة",
     "Write an excerpt for your post": "اكتب ملخص للمقالة",
+    "Write an excerpt for your page": "اكتب ملخص للصفحة",
     "Show All posts in": "هرض كافة المثالات في",
     "No posts found": "لاتوجد مقالات حاليا",
     "FAQ": "الأسئلة الشائعة",
