--- a/resources/lang/ckb.json
+++ b/resources/lang/ckb.json
@@ -11,6 +11,7 @@
     "Visibility": "بینین",
     "Not published": "بڵاونەکراوەتەوە",
     "Edit": "دەستکاریکردن",
+    "Open": "کردنەوە",
     "Post Tags": "پۆست تاگ",
     "Post Category": "جۆری پۆست",
     "Password Protected": "وشەی نهێنی پارێزراوە",
@@ -27,7 +28,9 @@
     "Trash": "زبڵدان",
     "Inherit": "میراتگرتن",
     "Post Title": "ناونیشانی پۆست",
+    "Page Title": "ناونیشانی لاپەڕە",
     "Post Content": "ناوەڕۆکی پۆست",
+    "Page Content": "ناوەڕۆکی لاپەڕە",
     "SEO": "SEO",
     "SEO Settings": "ڕێکخستنەکانی SEO",
     "Tags and Categories": "تاگ و پۆلەکان",
@@ -46,7 +49,9 @@
     "Parent Page": "لاپەڕەی پێشتر",
     "Page Order": "ڕیزبەندی لاپەڕە",
     "Post Slug": "پۆست سلۆگ",
+    "Page Slug": "سلۆگی لاپەڕە",
     "Write an excerpt for your post": "بڕگەیەک بۆ پۆستەکەت بنووسە",
+    "Write an excerpt for your page": "بڕگەیەک بۆ لاپەڕەکەت بنووسە",
     "Show All posts in": "هەموو پۆستەکان پیشان بدە لە",
     "No posts found": "No posts found",
     "FAQ": "پرسیارەکان",
