--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -11,6 +11,7 @@
     "Visibility": "Visibility",
     "Not published": "Not published",
     "Edit": "Edit",
+    "Open": "Open",
     "Post Tags": "Post Tags",
     "Post Category": "Post Category",
     "Password Protected": "Password Protected",
@@ -27,7 +28,9 @@
     "Trash": "Trash",
     "Inherit": "Inherit",
     "Post Title": "Post Title",
+    "Page Title": "Page Title",
     "Post Content": "Post Content",
+    "Page Content": "Page Content",
     "SEO": "SEO",
     "SEO Settings": "SEO Settings",
     "Tags and Categories": "Tags and Categories",
@@ -46,7 +49,9 @@
     "Parent Page": "Parent Page",
     "Page Order": "Page Order",
     "Post Slug": "Post Slug",
+    "Page Slug": "Page Slug",
     "Write an excerpt for your post": "Write an excerpt for your post",
+    "Write an excerpt for your page": "Write an excerpt for your page",
     "Show All posts in": "Show All posts in",
     "No posts found": "No posts found",
     "FAQ": "FAQ",
