--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -11,6 +11,7 @@
     "Visibility": "Visibilité",
     "Not published": "Non publié",
     "Edit": "Modifier",
+    "Open": "Ouvrir",
     "Post Tags": "Balises de publication",
     "Post Category": "Catégorie de l'article",
     "Password Protected": "Protégé par un mot de passe",
@@ -27,7 +28,9 @@
     "Trash": "Poubelle",
     "Inherit": "Héritage",
     "Post Title": "Titre de l'article",
+    "Page Title": "Titre de la page",
     "Post Content": "Contenu de l'article",
+    "Page Content": "Contenu de la page",
     "SEO": "SEO",
     "SEO Settings": "Paramètres SEO",
     "Tags and Categories": "Balises et catégories",
@@ -46,7 +49,9 @@
     "Parent Page": "Page Parent",
     "Page Order": "Ordre de la page",
     "Post Slug": "Lien de l'article",
+    "Page Slug": "Lien de la page",
     "Write an excerpt for your post": "Rédigez un extrait de votre article",
+    "Write an excerpt for your page": "Rédigez un extrait de votre page",
     "Show All posts in": "Afficher tous les messages dans",
     "No posts found": "Aucun article trouvé",
     "FAQ": "FAQ",
