--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -27,7 +27,9 @@
     "Trash": "Çöp Kutusu",
     "Inherit": "Miras Al",
     "Post Title": "Yazı Başlığı",
+    "Page Title": "Sayfa Başlığı",
     "Post Content": "Yazı İçeriği",
+    "Page Content": "Sayfa İçeriği",
     "SEO": "SEO",
     "SEO Settings": "SEO Ayarları",
     "Tags and Categories": "Etiketler ve Kategoriler",
@@ -47,7 +49,9 @@
     "Parent Page": "Üst Sayfa",
     "Page Order": "Sayfa Sıralaması",
     "Post Slug": "Yazı Bağlantısı",
+    "Page Slug": "Sayfa Bağlantısı",
     "Write an excerpt for your post": "Yazınız için bir özet yazın",
+    "Write an excerpt for your page": "Sayfanız için bir özet yazın",
     "Show All posts in": "Tüm yazıları göster:",
     "No posts found": "Gönderi bulunamadı",
     "Faq": "SSS",
