feat: add 'Delete' string and 'FAQ Categories' label to localization files for multiple languages

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -11,6 +11,7 @@
     "Visibility": "الظهور",
     "Not published": "غير منشور",
     "Edit": "تعديل",
+    "Delete": "حذف",
     "Open": "فتح",
     "Post Tags": "الأوسمة",
     "Post Category": "التصنيفات",
