--- a/resources/lang/ckb.json
+++ b/resources/lang/ckb.json
@@ -11,6 +11,7 @@
     "Visibility": "بینین",
     "Not published": "بڵاونەکراوەتەوە",
     "Edit": "دەستکاریکردن",
+    "Delete": "سڕینەوە",
     "Open": "کردنەوە",
     "Post Tags": "پۆست تاگ",
     "Post Category": "جۆری پۆست",
@@ -57,6 +58,7 @@
     "FAQ": "پرسیارەکان",
     "frequently asked questions": "ئەو پرسیارانەی کە زۆرجار دەکرێن",
     "FAQs": "پرسیارە بەردەوامەکان",
+    "FAQ Categories": "پۆلی پرسیارەکان",
     "Question": "پرسیار",
     "Answer": "وەڵام",
     "Clear": "پاککردنەوە",
