--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -11,6 +11,7 @@
     "Visibility": "Visibility",
     "Not published": "Not published",
     "Edit": "Edit",
+    "Delete": "Delete",
     "Open": "Open",
     "Post Tags": "Post Tags",
     "Post Category": "Post Category",
@@ -57,6 +58,7 @@
     "FAQ": "FAQ",
     "frequently asked questions": "frequently asked questions",
     "FAQs": "FAQs",
+    "FAQ Categories": "FAQ Categories",
     "Question": "Question",
     "Answer": "Answer",
     "Clear": "Clear",
