--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -11,6 +11,7 @@
     "Visibility": "Visibilité",
     "Not published": "Non publié",
     "Edit": "Modifier",
+    "Delete": "Supprimer",
     "Open": "Ouvrir",
     "Post Tags": "Balises de publication",
     "Post Category": "Catégorie de l'article",
@@ -57,6 +58,7 @@
     "FAQ": "FAQ",
     "frequently asked questions": "Questions fréquemment posées",
     "FAQs": "FAQs",
+    "FAQ Categories": "Catégories FAQ",
     "Question": "Question",
     "Answer": "Réponse",
     "Clear": "Vider",
