--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -11,6 +11,7 @@
     "Status": "Durum",
     "Not published": "Yayınlanmadı",
     "Edit": "Düzenle",
+    "Delete": "Sil",
     "Post Tags": "Yazı Etiketleri",
     "Post Category": "Yazı Kategorisi",
     "Password Protected": "Şifre Korumalı",
