feat: add new localization strings for 'Library Tags', 'Library file upload', and 'Library' across multiple languages

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -86,6 +86,10 @@
     "Library Categories": "تصنيف المكتبة",
     "Library Type": "نوع المحتوى",
     "Library File": "ملف المكتبة",
+    "Library Tags": "أوسمة المكتبة",
+    "Library file upload": "رفع ملف المكتبة",
+    "Library": "مكتبة",
+    "type": "النوع",
     "file url": "رابط الملف",
     "Send": "ارسال",
     "sorry, the password incorrect!": "عفوا، كلمة المرور غير صحيحة",
