--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -87,6 +87,10 @@
     "Library Categories": "Library Categories",
     "Library Type": "Library Type",
     "Library File": "Library File",
+    "Library Tags": "Library Tags",
+    "Library file upload": "Library file upload",
+    "Library": "Library",
+    "type": "Type",
     "file url": "file url",
     "Content Management": "Content Management",
     "About Us": "About Us",
