--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -87,5 +87,9 @@
     "Library Categories": "Library Categories",
     "Library Type": "Library Type",
     "Library File": "Library File",
+    "Library Tags": "Balises de bibliothèque",
+    "Library file upload": "Télécharger le fichier de bibliothèque",
+    "Library": "Bibliothèque",
+    "type": "Type",
     "file url": "file url"
 }
