--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -88,6 +88,7 @@
     "created at": "oluşturulma tarihi",
     "Show File": "Dosyayı Göster",
     "Library Tags": "Kütüphane Etiketleri",
+    "Library file upload": "Kütüphane dosyası yükle",
     "Library Title": "Kütüphane Başlığı",
     "Library Slug": "Kütüphane URL'i",
     "Library Description": "Kütüphane Açıklaması",
@@ -98,6 +99,7 @@
     "Tag.Name": "Etiket Adı",
     "Slug": "Adres",
     "Type": "Tür",
+    "type": "Tür",
     "Handle": "İşleyici Adı",
     "Open": "Aç",
     "Library": "Kütüphane",
