--- a/resources/lang/ckb.json
+++ b/resources/lang/ckb.json
@@ -87,5 +87,9 @@
     "Library Categories": "پۆلەکانی کتێبخانە",
     "Library Type": "جۆری کتێبخانە",
     "Library File": "فایلە کتێبخانە",
+    "Library Tags": "تاگی کتێبخانە",
+    "Library file upload": "بەرزکردنەوەی فایلی کتێبخانە",
+    "Library": "کتێبخانە",
+    "type": "جۆر",
     "file url": "url ی فایل"
 }
