feat: enhance localization by adding new strings for 'Tag Name', 'Category', 'FAQ', 'Slug', 'Items count', and updating labels in TagResource across multiple languages

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -3,6 +3,7 @@
     "Post": "مقالة",
     "CMS": "ادارة المحتوى",
     "Tag": "تصنيف",
+    "Tag.Name": "اسم التصنيف",
     "Tags": "التصنيفات",
     "publish": "منشور",
     "Title": "العنوان",
@@ -37,6 +38,8 @@
     "Tags and Categories": "التصنيفات والأوسمة",
     "Tags and Categories Options": "اعدادات التصنيفات والأوسمة",
     "Categories": "التصنيفات",
+    "Category": "فئة",
+    "Faq": "الأسئلة الشائعة",
     "visibility": "المشاهدة",
     "Visibility Options": "خيارات المشاهدة والعرض",
     "status": "حالة المقالة",
@@ -90,6 +93,9 @@
     "Library file upload": "رفع ملف المكتبة",
     "Library": "مكتبة",
     "type": "النوع",
+    "Type": "النوع",
+    "Slug": "الرابط المختصر",
+    "Items count": "عدد العناصر",
     "file url": "رابط الملف",
     "Send": "ارسال",
     "sorry, the password incorrect!": "عفوا، كلمة المرور غير صحيحة",
