--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -3,6 +3,7 @@
     "Post": "Post",
     "CMS": "CMS",
     "Tag": "Tag",
+    "Tag.Name": "Tag Name",
     "Tags": "Tags",
     "publish": "publish",
     "Title": "Title",
@@ -37,6 +38,8 @@
     "Tags and Categories": "Tags and Categories",
     "Tags and Categories Options": "Tags and Categories Options",
     "Categories": "Categories",
+    "Category": "Category",
+    "Faq": "FAQ",
     "visibility": "visibility",
     "Visibility Options": "Visibility Options",
     "status": "status",
@@ -91,6 +94,9 @@
     "Library file upload": "Library file upload",
     "Library": "Library",
     "type": "Type",
+    "Type": "Type",
+    "Slug": "Slug",
+    "Items count": "Items count",
     "file url": "file url",
     "Content Management": "Content Management",
     "About Us": "About Us",
