--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -36,6 +36,7 @@
     "Tags and Categories": "Etiketler ve Kategoriler",
     "Tags and Categories Options": "Etiket ve Kategori Seçenekleri",
     "Categories": "Kategoriler",
+    "Category": "Kategori",
     "visibility": "görünürlük",
     "Visibility": "Görünürlük",
     "Visibility Options": "Görünürlük Seçenekleri",
